fix(InputField): prevent clear button overlapping inserted number

--- a/src/components/generic/InputField/InputField.scss
+++ b/src/components/generic/InputField/InputField.scss
@@ -22,6 +22,7 @@ $C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-input-field;
     box-sizing: border-box;
 
     &[type="number"] {
+      padding: 0.25rem 3.85rem 0.125rem 0.75rem;
       -moz-appearance: textfield;
 
       &::-webkit-inner-spin-button,
